--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -15,7 +23,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Sharp"
       rel="stylesheet"
     />
-    <title>FILM LOGS</title>
+    <title>Film log</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
