--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,43 @@
       name="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1"
     />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="An app to log your rolls of film when out shooting"
-    />
     <link rel="apple-touch-icon" href="logo-192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="apple-touch-startup-image"
+      href="launch-640x1136.png"
+      media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="launch-750x1294.png"
+      media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="launch-1242x2148.png"
+      media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="launch-1125x2436.png"
+      media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+    />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Sharp"
       rel="stylesheet"
     />
     <title>Film log</title>
+    <meta
+      name="description"
+      content="An app to log your rolls of film when out shooting"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
